se hace un merge entre el desafio numero 2 y master

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                <div class="trabajos__cartas">
                      <img class="trabajos__regla"  src="./img/aluminio-regla.jpg" alt="sujeteo tomandos medias con una regla">
                      <h3 class="trabajos__titulo">diseños exclusivos</h3>
-                     <p class="trabajos__texto">Lorem ipsum dolor, sit amet consectetur adipisicig elit. Architecto vitae at quam! Necessitatibus dignissimos atque quisquam, est</p>
+                     <p class="trabajos__texto">Lorem ipsum dolor, sit amet consectetur adipisicig elt. Architecto viae at quam! Necessitatibus dignissimos atque quisquam, est</p>
               </div>
         </section>
         <section class="presentacion" data-aos="flip-down">
