se hace un merge entre el desafio numero n2 y master

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                  <div class="trabajos__cartas">
                      <img class="trabajos__soldador" src="./img/soldador -chispa -de-soldadura.jpg" alt="hombre soldando y chispas alrededor">
                      <h3 class="trabajos__titulo">trabajo en equipo</h3>
-                     <p class="trabajos__texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto vitae at quam! Necessitatibus dignissimos atque quisquam, est</p>
+                     <p class="trabajos__texto">Lorem ipsum dolor, sit amet consectetur adipisicin elit. Architecto vtae at quam! Necessitatibus dignissimos atque quisquam, est</p>
                 </div>
                 <div class="trabajos__cartas">
                      <img class="trabajos__perfil" src="./img/perfil-de- aluminio.jpg" alt="perfil de aluminio blanco">
