commit de prueba de  sass1

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="trabajos__cartas">
                      <img class="trabajos__perfil" src="./img/perfil-de- aluminio.jpg" alt="perfil de aluminio blanco">
                      <h3 class="trabajos__titulo">los mejores materiales</h3>
-                     <p class="trabajos__texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto vitae at quam! Necessitatibus dignissimos atque quisquam, est</p>
+                     <p class="trabajos__texto">Lorem ipsum dolor, sit amet consectetur adipisicing eit. Architecto vitae at quam! Necessitatibus dignissimos atque quisquam, est</p>
                </div> 
                <div class="trabajos__cartas">
                      <img class="trabajos__regla"  src="./img/aluminio-regla.jpg" alt="sujeteo tomandos medias con una regla">
