trabajo_segunda_entrega_proyecto_final

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="card" style="width: 60rem;">
                     <div class="card-body">
                       <h5 class="solucion card-title">realizamos trabajos de aluminio a medida.</h5>
-                     <p class="card-text">nueva seccion de aluminio Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque animi cum repudiandae facere quos sapiente adipisci, nisi officiis aut, doloribus dolorum. Nisi labore iste molestias ipsam, sit corrupti totam quasi?</p>
+                     <p class="card-text">nueva seccion de aluminio Lorem ipsum dolor sit amet consecetur adipisicing elit. Eaque animi cum repudiandae facere quos sapiente adipisci, nisi officiis aut, doloribus dolorum. Nisi labore iste molestias ipsam, sit corrupti totam quasi?</p>
                       <a href="./views/aluminio.html" class="card-link">aluminio</a>
                       <a href="./views/contactos.html" class="card-link">contactos</a>
                     </div>
