prueba para ver si se refleja en github

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section class="presentacion" data-aos="flip-down">
                         <h3 class="presentacion__pregunta">¿Que hacemos?</h3>
                         <img class="presentacion__perforando" src="./img/aluminio.jpg" alt="">
-                        <p class="presentacion__resenia">Lorem, ipsum dolor sit amet consecteur adipisicing elit. Harum, cumque? Nulla odit itaaque ipsum. Consectetur asperiores optio ipsa sequi, neque excepturi iure assumenda tenetur amet necessitatibus nihil quo minus adipisci? Lorem ipsum dolor sit amet consectetur, adipisicing elit. In aliquid itaque quia fugit? Dolore ducimus rem libero nisi consequatur aliquid veniam dolorem nihil a placeat aut, quisquam unde earum consectetur?</p>        
+                        <p class="presentacion__resenia">Lorem, ipsum dolor sit amet consecteur adipisicing elit. Harum, cumque? Nulla odit itaaque ipsum. Consecetur asperiores optio ipsa sequi, neque excepturi iure assumenda tenetur amet necessitatibus nihil quo minus adipisci? Lorem ipsum dolor sit amet consectetur, adipisicing elit. In aliquid itaque quia fugit? Dolore ducimus rem libero nisi consequatur aliquid veniam dolorem nihil a placeat aut, quisquam unde earum consectetur?</p>        
         </section>
       </div>
 </main>
