desafio_sass2_seo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="empresa dedicada a la creacion e instalacion de aberturas de aluminio y de herreria en general ofrecemos una amplia variedad de productos que se pueden adaptar segun la necesidad del cliente">
+    <meta name="keywords" content="aberturas, rejas, ventanas, puertas , portones , herreria, trabajos a medidas">
+    <title>inicio/herreria antonutti</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/index.css"> 
@@ -56,17 +59,17 @@
     
         <section class="trabajos">
                  <div class="trabajos__cartas">
-                     <img class="trabajos__soldador" src="./img/soldador -chispa -de-soldadura.jpg" alt="hombre soldando y chispas alrededor">
+                     <img class="trabajos__soldador box-shadow" src="./img/soldador -chispa -de-soldadura.jpg" alt="hombre soldando y chispas alrededor">
                      <h3 class="trabajos__titulo">trabajo en equipo</h3>
                      <p class="trabajos__texto">Lorem ipsum dolor, sit amet consectetur adipisicin elit. Architecto vtae at quam! Necessitatibus dignissimos atque quisquam, est</p>
                 </div>
                 <div class="trabajos__cartas">
-                     <img class="trabajos__perfil" src="./img/perfil-de- aluminio.jpg" alt="perfil de aluminio blanco">
+                     <img class="trabajos__perfil box-shadow" src="./img/perfil-de- aluminio.jpg" alt="perfil de aluminio blanco">
                      <h3 class="trabajos__titulo">los mejores materiales</h3>
                      <p class="trabajos__texto">Lorem ipsum dolor, sit amet consectetur adipisicing eit. Architecto vitae at quam! Necessitatibus dignissimos atque quisquam, est</p>
                </div> 
                <div class="trabajos__cartas">
-                     <img class="trabajos__regla"  src="./img/aluminio-regla.jpg" alt="sujeteo tomandos medias con una regla">
+                     <img class="trabajos__regla box-shadow"  src="./img/aluminio-regla.jpg" alt="sujeteo tomandos medias con una regla">
                      <h3 class="trabajos__titulo">diseños exclusivos</h3>
                      <p class="trabajos__texto">Lorem ipsum dolor, sit amet consectetur adipisicig elt. Architecto viae at quam! Necessitatibus dignissimos atque quisquam, est</p>
               </div>
