--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="empresa dedicada a la creacion e instalacion de aberturas de aluminio y de herreria en general ofrecemos una amplia variedad de productos que se pueden adaptar segun la necesidad del cliente">
     <meta name="keywords" content="aberturas, rejas, ventanas, puertas , portones , herreria, trabajos a medidas">
     <title>inicio/herreria antonutti</title>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/index.css"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,39 +16,49 @@
 </head>
 
 <body>
-  <header>
+<header>
             <picture class="header__logo">
                <img class="header__img" src="./img/logo.png" alt="logo de herreria amtonutti">
-            </picture>          
-            <nav class="navegacion">
-                                   <ul class="menu">
-                                         <li class="menu__list">
-                                            <a class="menu__link" href="./index.html">inicio</a></li>
-                                        <li class="menu__list">
-                                            <a class="menu__link" href="./views/nosotros.html">nosotros</a></li>
-                                        <li class="menu__list">
-                                            <a class="menu__link" href="./views/aluminio.html">aluminio</a></li>
-                                        <li class="menu__list">
-                                            <a class="menu__link" href="./views/herreria.html">herreria</a></li>
-                                        <li class="menu__list">
-                                            <a class="menu__link" href="./views/contactos.html">contactos</a></li>
-                                   </ul>
-        </nav>
-    </header>
+            </picture>
+            <nav class="navbar navbar-expand-md  navbar-dark">
+                <button id="boton" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                    <span id="navegacion" class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./views/nosotros.html">nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./views/aluminio.html">aluminio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./views/herreria.html">herreria</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./views/contactos.html">Contactos</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>         
+</header>
    
-<main class="container">
+<main>
      <div class="grilla">
        <div class="bienvenida">
           <section>  
                 <article class="card bg-dark text-white">
                                 <img class="entrada__baner card-img" src="./img/fragua.jpg" alt="imagen de una fragua al rojo vivo">
                                 <div class="card-img-overlay">
-                                      <h1 data-aos="fade-right" class="solucion">La solucion en aberturas y herreria que tus proyectos necesitan.</h1>
+                                      <h1 class="solucion ">La solucion en aberturas y herreria que tus proyectos necesitan.</h1>
                                 </div>
                 </article>
                 <div class="card" style="width: 60rem;">
                     <div class="card-body">
-                      <h5 class="solucion card-title">realizamos trabajos de aluminio a medida.</h5>
+                      <h5 class="card-title ">realizamos trabajos de aluminio a medida.</h5>
                      <p class="card-text">nueva seccion de aluminio Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque animi cum repudiandae facere quos saiente adipisci, nisi officiis aut, doloribus dolorum. Nisi labore iste molestias ipsam, sit corrupti totam quasi?</p>
                       <a href="./views/aluminio.html" class="card-link">aluminio</a>
                       <a href="./views/contactos.html" class="card-link">contactos</a>
@@ -95,11 +105,18 @@
 
         </section>
     </footer> 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
+    </script>
     <script>
         AOS.init();
-      </script>
+      </script> -->
  </body>
 
 </html> 
