entrega_trabajo_final

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="empresa dedicada a la creacion e instalacion de aberturas de aluminio y de herreria en general ofrecemos una amplia variedad de productos que se pueden adaptar segun la necesidad del cliente">
     <meta name="keywords" content="aberturas, rejas, ventanas, puertas , portones , herreria, trabajos a medidas">
-    <title>inicio/herreria antonutti</title>
+    <title>Inicio/Herreria Antonutti</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="css/translated.css"> 
@@ -31,13 +31,13 @@
                       <a class="nav-link" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./views/nosotros.html">nosotros</a>
+                      <a class="nav-link" href="./views/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./views/aluminio.html">aluminio</a>
+                      <a class="nav-link" href="./views/aluminio.html">Aluminio</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./views/herreria.html">herreria</a>
+                      <a class="nav-link" href="./views/herreria.html">Herreria</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="./views/contactos.html">Contactos</a>
@@ -86,10 +86,10 @@
                 </article>
                 
                     <div class="card-body">
-                      <h5 class="card-title ">realizamos trabajos de aluminio a medida.</h5>
+                      <h5 class="card-title ">Realizamos trabajos de aluminio a medida.</h5>
                      <p class="card-text">Trabajamos todas las líneas brindánole asesoramiento para optimizar al máximo su inversión. Tenemos disponible la línea de aluminio que su proyecto necesita, tanto las de alta como las de media performance. Conocé más de nuestras líneas.</p>
-                      <a href="./views/aluminio.html" class="card-link__aluminio">aluminio</a>
-                      <a href="./views/contactos.html" class="card-link__contacto">contactos</a>
+                      <a href="./views/aluminio.html" class="card-link__aluminio">Aluminio</a>
+                      <a href="./views/contactos.html" class="card-link__contacto">Contactos</a>
                     </div>
                     
            </section> 
@@ -98,24 +98,24 @@
         <section class="trabajos">
                  <div class="trabajos__cartas">
                      <img class="trabajos__cuadro box-shadow" src="./img/soldador -chispa -de-soldadura.jpg" alt="hombre soldando y chispas alrededor">
-                     <h3 class="trabajos__titulo">trabajo en equipo</h3>
+                     <h3 class="trabajos__titulo">Trabajo en equipo</h3>
                      <p class="trabajos__texto">Contamos con personal ampliamente capacitado en la utilización de nuevas tecnologías y procedimientos de fabricación para brindar soluciones a las necesidades de cada cliente, afianzando nuestra presencia en el mercado a través del cumplimiento, la respuesta, la garantía y la mejor calidad.</p>
                 </div>
                 <div class="trabajos__cartas">
                      <img class="trabajos__cuadro box-shadow" src="./img/perfil-de- aluminio.jpg" alt="perfil de aluminio blanco">
-                     <h3 class="trabajos__titulo">los mejores materiales</h3>
+                     <h3 class="trabajos__titulo">Los mejores materiales</h3>
                      <p class="trabajos__texto">Proveemos de la más amplia gama en accesorios para aberturas de aluminio nacionales e importados, TANIT, SCHLEGELGIESSE, CHAMICAL, FAPIM, entre otros. Así mismo trabajamos con toda la línea de máquinas y punzonadoras OK industrial.</p>
                </div> 
                <div class="trabajos__cartas">
                      <img class="trabajos__cuadro box-shadow"  src="./img/aluminio-regla.jpg" alt="sujeto tomandos medias con una regla">
-                     <h3 class="trabajos__titulo">diseños exclusivos</h3>
-                     <p class="trabajos__texto">estamos en continuo desarrollo, por lo que garantizámos nuestros servicios y brindamos un seguimiento técnico por un año para efectivizar el funcionamiento correcto.</p>
+                     <h3 class="trabajos__titulo">Diseños exclusivos</h3>
+                     <p class="trabajos__texto">Estamos en continuo desarrollo, por lo que garantizámos nuestros servicios y brindamos un seguimiento técnico por un año para efectivizar el funcionamiento correcto.</p>
               </div>
         </section>
         <section class="presentacion">
                         <h3 class="presentacion__pregunta">¿Que hacemos?</h3>
                         <img class="presentacion__perforando" src="./img/aluminio.jpg" alt="maquina de banco perforando aluminio">
-                        <p class="presentacion__resenia">tenemos la capacidad de poder brindarles a nuestros clientes desde la abertura más sencilla hasta el rendimiento más exigente en una carpintería, mediante la incorporación de líneas de alta gama y contando con el apoyo de jóvenes profesionales especialmente capacitados para brindar las soluciones que ustedes necesiten.</p>        
+                        <p class="presentacion__resenia">Tenemos la capacidad de poder brindarles a nuestros clientes desde la abertura más sencilla hasta el rendimiento más exigente en una carpintería, mediante la incorporación de líneas de alta gama y contando con el apoyo de jóvenes profesionales especialmente capacitados para brindar las soluciones que ustedes necesiten.</p>        
         </section>
       </div>
  </main>
@@ -130,11 +130,11 @@
                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d850.8258429315946!2d-64.09083887075876!3d-31.460839898836813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432bc661558ec31%3A0xd6269b772dec9f!2sGramme%205178%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1657575718981!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="encabezado">            
-                  <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
-                  <h3 class="encabezado__direccion">direcion: gramme 5178</h3>
+                  <h3 class="encabezado__horarios">Horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
+                  <h3 class="encabezado__direccion">Direcion: gramme 5178</h3>
 
                 <div class="alert alert-danger" role="alert">
-                      <p>esta pagina web es sin fines de lucro . todos los derechos reservados</p>
+                      <p>Esta pagina web es sin fines de lucro . todos los derechos reservados</p>
                 </div>                  
        </section>
     </footer> 
